not seeing the finish Line

--- a/views/sports/index.ejs
+++ b/views/sports/index.ejs
@@ -7,11 +7,6 @@
 </head>
 <body>
     <h1>Welcome to the Fantasy Sports App</h1>
-    <h2>Teams</h2>
-    <ul>
-        <% teams.forEach(team => { %>
-            <li><%= team.strTeam %></li>
-        <% }) %>
-    </ul>
+    <a href="/api/players">View All Players</a>
 </body>
 </html>
